Added ring/logring constructors from list

--- a/src/makefile
+++ b/src/makefile
@@ -1,14 +1,26 @@
+MPICC = mpicc
 OPT := -g -O0
 
-all: clean
-	mpicc $(OPT) -c -o lwgrp.o lwgrp.c
-	mpicc $(OPT) -c -o lwgrp_util.o lwgrp_util.c
-	mpicc $(OPT) -c -o lwgrp_chain_ops.o lwgrp_chain_ops.c
-	mpicc $(OPT) -c -o lwgrp_ring_ops.o lwgrp_ring_ops.c
-	mpicc $(OPT) -c -o lwgrp_logchain_ops.o lwgrp_logchain_ops.c
-	mpicc $(OPT) -c -o lwgrp_logring_ops.o lwgrp_logring_ops.c
-	mpicc $(OPT) -c -o lwgrp_comm_split.o lwgrp_comm_split.c
-	mpicc $(OPT) -o testsplit testsplit.c *.o
+OBJS = \
+	lwgrp.o \
+	lwgrp_util.o \
+	lwgrp_chain_ops.o \
+	lwgrp_ring_ops.o \
+	lwgrp_logchain_ops.o \
+	lwgrp_logring_ops.o \
+	lwgrp_comm_split.o
+
+all: clean liblwgrp.a testsplit
+
+liblwgrp.a: $(OBJS)
+	ar r $@ $(OBJS)
+	ranlib $@
+
+%.o: %.c *.h
+	$(MPICC) $(OPT) $(CFLAGS) -c $< -o $@ -I.
+
+testsplit: testsplit.c *h liblwgrp.a
+	$(MPICC) $(OPT) -o testsplit testsplit.c liblwgrp.a
 
 clean:
-	rm -f *.o testsplit
+	rm -f *.o liblwgrp.a testsplit
