Add lwgrp.h to install

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/config
 
 # headers to be installed in /include subdirectory
-#include_HEADERS =
+include_HEADERS = \
+	lwgrp.h
 
 # headers that should not be installed into /include
 noinst_HEADERS = \
