--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -79,7 +79,7 @@ am_liblwgrp_la_OBJECTS = liblwgrp_la-lwgrp.lo \
 	liblwgrp_la-lwgrp_util.lo liblwgrp_la-lwgrp_chain_ops.lo \
 	liblwgrp_la-lwgrp_ring_ops.lo \
 	liblwgrp_la-lwgrp_logchain_ops.lo \
-	liblwgrp_la-lwgrp_logring_ops.lo \
+	liblwgrp_la-lwgrp_logring_ops.lo liblwgrp_la-lwgrp_comm.lo \
 	liblwgrp_la-lwgrp_comm_split.lo
 liblwgrp_la_OBJECTS = $(am_liblwgrp_la_OBJECTS)
 liblwgrp_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
@@ -249,7 +249,8 @@ AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/config
 
 # headers to be installed in /include subdirectory
 include_HEADERS = \
-	lwgrp.h
+	lwgrp.h \
+	lwgrp_comm.h
 
 
 # headers that should not be installed into /include
@@ -275,6 +276,7 @@ liblwgrp_la_SOURCES = \
   lwgrp_ring_ops.c \
   lwgrp_logchain_ops.c \
   lwgrp_logring_ops.c \
+  lwgrp_comm.c \
   lwgrp_comm_split.c
 
 liblwgrp_la_CFLAGS = $(INCLUDES)
@@ -356,6 +358,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liblwgrp_la-lwgrp.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liblwgrp_la-lwgrp_chain_ops.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liblwgrp_la-lwgrp_comm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liblwgrp_la-lwgrp_comm_split.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liblwgrp_la-lwgrp_logchain_ops.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liblwgrp_la-lwgrp_logring_ops.Plo@am__quote@
@@ -424,6 +427,13 @@ liblwgrp_la-lwgrp_logring_ops.lo: lwgrp_logring_ops.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='lwgrp_logring_ops.c' object='liblwgrp_la-lwgrp_logring_ops.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(liblwgrp_la_CFLAGS) $(CFLAGS) -c -o liblwgrp_la-lwgrp_logring_ops.lo `test -f 'lwgrp_logring_ops.c' || echo '$(srcdir)/'`lwgrp_logring_ops.c
+
+liblwgrp_la-lwgrp_comm.lo: lwgrp_comm.c
+@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(liblwgrp_la_CFLAGS) $(CFLAGS) -MT liblwgrp_la-lwgrp_comm.lo -MD -MP -MF $(DEPDIR)/liblwgrp_la-lwgrp_comm.Tpo -c -o liblwgrp_la-lwgrp_comm.lo `test -f 'lwgrp_comm.c' || echo '$(srcdir)/'`lwgrp_comm.c
+@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/liblwgrp_la-lwgrp_comm.Tpo $(DEPDIR)/liblwgrp_la-lwgrp_comm.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='lwgrp_comm.c' object='liblwgrp_la-lwgrp_comm.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(liblwgrp_la_CFLAGS) $(CFLAGS) -c -o liblwgrp_la-lwgrp_comm.lo `test -f 'lwgrp_comm.c' || echo '$(srcdir)/'`lwgrp_comm.c
 
 liblwgrp_la-lwgrp_comm_split.lo: lwgrp_comm_split.c
 @am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(liblwgrp_la_CFLAGS) $(CFLAGS) -MT liblwgrp_la-lwgrp_comm_split.lo -MD -MP -MF $(DEPDIR)/liblwgrp_la-lwgrp_comm_split.Tpo -c -o liblwgrp_la-lwgrp_comm_split.lo `test -f 'lwgrp_comm_split.c' || echo '$(srcdir)/'`lwgrp_comm_split.c
