Only use MPI_ANY_SOURCE if --enable-mpianysource is specified in configure step.

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -40,6 +40,9 @@
    */
 #undef LT_OBJDIR
 
+/* Set to 1 if liblwgrp should use MPI_ANY_SOURCE */
+#undef LWGRP_USE_ANYSOURCE
+
 /* Define the project alias string (name-ver or name-ver-rel). */
 #undef META_ALIAS
 
